# mads-siads-699-winter-2026-capstone

./: .editorconfig  .env.example  .gitignore  README.md  justfile  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-quality.yaml
appendix/EDA/: feature_total_downloads.ipynb
appendix/predictions/: rq2_prediction.ipynb
appendix/sql/exploration/: github_repos_with_python_lang.sql  pypi_package_deps_over_time.sql
appendix/tests/: test_extract_librariesio_api.py
notebooks/: construct_final_dataset.ipynb  data-exploration.ipynb  rq1.ipynb  rq2.ipynb
notebooks/EDA/: harjason_data_src_eval.ipynb  kshcherb_explore_initial_data.ipynb  kshcherb_github_api.ipynb  kshcherb_visualization.ipynb  mttu_explore.ipynb
notebooks/data/augmented_data/: RQ_1_dataset.parquet  RQ_2_dataset.parquet  final_dataset.parquet
notebooks/data/augmented_data/mttu_mttr_data/: processed_files.json  res_000000000004.parquet  res_000000000005.parquet  res_000000000006.parquet  res_000000000007.parquet  res_000000000008.parquet  res_000000000009.parquet  res_000000000010.parquet  res_000000000011.parquet  res_000000000012.parquet  res_000000000013.parquet  res_000000000014.parquet  res_000000000015.parquet  (+72 more)
notebooks/exploratory/harjason-eda/: deps-eda.ipynb
notebooks/prediction/: rq1.ipynb  rq1_prediction.ipynb  rq1_psm.ipynb  rq2.ipynb  rq2_prediction.ipynb  rq2_psm.ipynb
notebooks/visualization/: correlation_analysis.ipynb  mttu_mttr_visualization.ipynb  pypi_dependency_graph.ipynb
sql/: github_repos_with_python_lang.sql
sql/dataset_construction/: 1_unique_pypi_packages_count.sql  2_unique_pypi_packages_with_github_repos.sql  3_unique_pypi_packages_with_github_repos_and_deps.sql  initial_dataset.sql  unique_pypi_packages_count.sql
sql/dataset_construction/control_variable_metrics/: total_downloads.sql
sql/dataset_construction/initial_dataset/: 1_unique_packages.sql  2_unique_packages_with_github_repos.sql  3_unique_packages_with_github_repos_and_dependencies.sql  4_unique_packages_with_github_repos_and_dependencies_and_dependants.sql  5_single_package_repos.sql  final_dataset.sql
sql/dataset_construction/open_ssf_scorecard/: scorecard_metrics.sql
sql/exploration/: dependency_graph.sql  mttu_explore.ipynb  packages_with_github_as_source_url.sql  snapshot_range.sql
src/: extract_librariesio_api.py  extract_repo_list.py  settings.py
src/capstone/: construct_final_dataset.py  normality.py
src/capstone/extraction/: extract_librariesio_api.py  extract_ossf_scorecard_scans.py  extract_repo_list.py
src/capstone/features/: compute_dependency_count.py  compute_mttr_mttu.py  compute_repo_age_and_staleness.py  compute_repo_contributions_and_size.py  publish_libaries_io_features.py  publish_ossf_scorecard.py  publish_ossf_scorecard_cli.py  publish_pypi_downloads.py
tests/: conftest.py  test_data_quality.py  test_extract_librariesio_api.py
(+5 files in other folders)
